# drake-lite-cmake

./: CMakeLists.txt  GenerateSourceFiles.cmake  README.md  dummy_drake_path.cc  mantainer-notes.md  msvc_private_workarounds.h
.github/workflows/: ci.yml
autogenerated/: source_files.cmake
cmake/: Findtinyxml2.cmake
examples/: CMakeLists.txt
scripts/: generate-source-files.py
tests/: CMakeLists.txt
